* Recreated project because of Android Studio fuckery * Edited Database structure * Readded and restructured base * Begin of implementing category system * Begin of implementing QuizManager * Begin of implementing Database interface

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">QuizDroid</string>
+    <string name="app_name">Quiz Droid</string>
+
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <string name="title_activity_quiz_stage">QuizStage</string>
 </resources>
