--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -1,18 +1,26 @@
 <resources>
     <string name="app_name">Quiz Droid</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">QUIZ\nDROID</string>
-    <string name="title_activity_quiz_stage">Quiz Stage</string>
-    <string name="title_activity_profile_creation">ProfileCreation</string>
-    <string name="title_activity_quiz_setup">Quiz Setup</string>
-    <string name="title_activity_critical_error_page">CriticalErrorPage</string>
 
-    <string name="title_error_page">Ooops!</string>
+    <string name="title_activity_quiz_stage">Quiz Stage</string>
+    <string name="title_activity_profile_creation">Profiles</string>
+    <string name="title_activity_quiz_setup">Quiz Setup</string>
+
     <string name="debug_lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
     <string name="debug_lorem_ipsum_short">Lorem ipsum dolor sit amet.</string>
+    <string name="debug_default_text">DEFAULT</string>
 
     <string name="quiz_end_no_trails">This was your last try.</string>
     <string name="quiz_end_last_question">Last question.</string>
 
     <string name="title_activity_results">Results</string>
+
+    <string name="label_results_name">Player:</string>
+    <string name="label_results_score">Score:</string>
+    <string name="label_results_correct_answers">Correct answers:</string>
+    <string name="label_results_category">Category:</string>
+
+    <string name="label_results_difficulty">Difficulty:</string>
+
+    <string name="button_Ok">Ok</string>
+
 </resources>
